replace string literal with constant